cmake_minimum_required(VERSION 3.22.1 FATAL_ERROR)
project(gz-ogre-3)

find_package(gz-cmake4 REQUIRED)

message(STATUS "Finding OGRE 3")

gz_find_package(GzOGRE3 VERSION 3
    COMPONENTS HlmsPbs HlmsUnlit Overlay Atmosphere)

message(STATUS "OGRE3_FOUND: " ${OGRE3_FOUND})
if(OGRE3_FOUND)
  message(STATUS "OGRE3_LIBRARIES: " ${OGRE3_LIBRARIES})
  message(STATUS "OGRE3_INCLUDE_DIRS: " ${OGRE3_INCLUDE_DIRS})
  message(STATUS "OGRE3_VERSION: " ${OGRE3_VERSION})
  message(STATUS "OGRE3_VERSION_MAJOR: " ${OGRE3_VERSION_MAJOR})
  message(STATUS "OGRE3_VERSION_MINOR: " ${OGRE3_VERSION_MINOR})
  message(STATUS "OGRE3_VERSION_PATCH: " ${OGRE3_VERSION_PATCH})
  message(STATUS "OGRE3_RESOURCE_PATH: " ${OGRE3_RESOURCE_PATH})

  message(STATUS "GzOGRE3_VERSION_EXACT: " ${GzOGRE3_VERSION_EXACT})
  message(STATUS "GzOGRE3_VERSION_COMPATIBLE: " ${GzOGRE3_VERSION_COMPATIBLE})
endif()
