cmake_minimum_required(VERSION 3.22.1 FATAL_ERROR)
project(gz-ogre-next-v3.0)

find_package(gz-cmake REQUIRED)

message(STATUS "Finding OGRE-Next of version 3.0")

get_property(IMPORT_TARGETS DIRECTORY "${CMAKE_SOURCE_DIR}" PROPERTY IMPORTED_TARGETS)

gz_find_package(GzOGRENext VERSION 3.0 COMPONENTS HlmsPbs HlmsUnlit Overlay)

message(STATUS "OGRE_NEXT_FOUND: " ${OGRE_NEXT_FOUND})
if(OGRE_NEXT_FOUND)
  message(STATUS "OGRE_NEXT_LIBRARIES: " ${OGRE_NEXT_LIBRARIES})
  message(STATUS "OGRE_NEXT_INCLUDE_DIRS: " ${OGRE_NEXT_INCLUDE_DIRS})
  message(STATUS "OGRE_NEXT_VERSION: " ${OGRE_NEXT_VERSION})
  message(STATUS "OGRE_NEXT_VERSION_MAJOR: " ${OGRE_NEXT_VERSION_MAJOR})
  message(STATUS "OGRE_NEXT_VERSION_MINOR: " ${OGRE_NEXT_VERSION_MINOR})
  message(STATUS "OGRE_NEXT_VERSION_PATCH: " ${OGRE_NEXT_VERSION_PATCH})
  message(STATUS "OGRE_NEXT_RESOURCE_PATH: " ${OGRE_NEXT_RESOURCE_PATH})

  message(STATUS "GzOGRENext_VERSION_EXACT: " ${GzOGRENext_VERSION_EXACT})
  message(STATUS
      "GzOGRENext_VERSION_COMPATIBLE: " ${GzOGRENext_VERSION_COMPATIBLE})

  get_property(IMPORT_TARGETS_AFTER DIRECTORY "${CMAKE_SOURCE_DIR}" PROPERTY IMPORTED_TARGETS)
  list(REMOVE_ITEM IMPORT_TARGETS_AFTER ${IMPORT_TARGETS})
  message(STATUS "Imported targets: " ${IMPORT_TARGETS_AFTER})
endif()
